--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/oauth2": "^7.1.0",
     "fastify": "^4.17.0"
   },
   "devDependencies": {
