--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/oauth2": "^7.1.0",
+    "axios": "^1.4.0",
     "fastify": "^4.17.0"
   },
   "devDependencies": {
