--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.41.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   }
