--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/oauth2": "^7.1.0",
+    "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "fastify": "^4.17.0"
   },
@@ -23,6 +24,7 @@
     "eslint": "^8.41.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
+    "prisma": "^4.15.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   }
