--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fastify/oauth2": "^7.1.0",
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
-    "fastify": "^4.17.0"
+    "fastify": "^4.17.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
