--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "^7.0.0",
     "@fastify/oauth2": "^7.1.0",
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
