--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@fastify/jwt": "^7.0.0",
-    "@fastify/oauth2": "^7.1.0",
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "dotenv": "^16.1.0",
