--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
     "prisma": "^4.15.0",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.7",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
