--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "node ./dist/server.js",
     "dev": "tsx watch ./src/server.ts"
   },
-  "keywords": ["API", "fastify", "budget"],
+  "keywords": [
+    "API",
+    "fastify",
+    "budget"
+  ],
   "author": "Jair Oliveira",
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@fastify/jwt": "^7.0.0",
+    "@fastify/swagger": "^8.6.0",
+    "@fastify/swagger-ui": "^1.9.0",
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "dotenv": "^16.1.0",
     "fastify": "^4.17.0",
+    "fastify-zod": "^1.3.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
