--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "budget-api",
   "version": "1.0.0",
   "description": "The Budget API is a powerful and flexible tool designed to help users manage their personal finances effectively",
-  "main": "./dist/server.js",
+  "main": "./dist/app.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node ./dist/src/server.js",
-    "dev": "tsx watch ./src/server.ts"
+    "start": "node ./dist/src/app.js",
+    "dev": "tsx watch ./src/app.ts",
+    "test": "vitest"
   },
   "keywords": [
     "API",
@@ -37,6 +38,7 @@
     "prisma": "^4.15.0",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^0.33.0"
   }
 }
